--- a/app/views/unique_pokemons/index.html.erb
+++ b/app/views/unique_pokemons/index.html.erb
@@ -1,6 +1,12 @@
 <head>
     <title></title>
     <style>
+      /* .col-sm-2 {
+        background: green
+      }
+      .col-sm-3 {
+        background: green
+      } */
     </style>
 </head>
 
@@ -22,13 +28,60 @@
                   <p class="card=text"><img src="<%= @unique_pokemons[index].pokemon.first_type_image%>"> <img src="<%= @unique_pokemons[index].pokemon.second_type_image%>"> #<%= @unique_pokemons[index].pokemon.national_dex_num %></p>
                   <p><b>Nickname: </b><%= @unique_pokemons[index].nickname%></p>
                   <p class="card=text"><b> Abilities: </b> <%= @unique_pokemons[index].pokemon.abilities%> </p>
-                  <p class="card=text"> 
-                  <b> HP: </b> <%= @unique_pokemons[index].pokemon.hp.to_i + @unique_pokemons[index].hp_iv + @unique_pokemons[index].hp_ev/4%> <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="hp_iv_bar" display="inline" width="<%= @unique_pokemons[index].hp_iv * 1%>" height="10"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="hp_base_bar" display="inline" width="<%= @unique_pokemons[index].pokemon.hp.to_i * 1%>" height="10"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="hp_ev_bar" display="inline" width="<%= (@unique_pokemons[index].hp_ev/4) * 1%>" height="10"></p> 
-                  <b> Atk: </b> <%= @unique_pokemons[index].pokemon.atk.to_i + @unique_pokemons[index].atk_iv + @unique_pokemons[index].atk_ev/4%> <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="atk_iv_bar" display="inline" width="<%= @unique_pokemons[index].atk_iv * 1%>" height="10"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="atk_base_bar" display="inline" width="<%= @unique_pokemons[index].pokemon.atk.to_i * 1%>" height="10"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="atk_ev_bar" display="inline" width="<%= (@unique_pokemons[index].atk_ev/4) * 1%>" height="10"></p> 
-                  <b> Def: </b> <%= @unique_pokemons[index].pokemon.defe.to_i + @unique_pokemons[index].defe_iv + @unique_pokemons[index].defe_ev/4%> <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="defe_iv_bar" display="inline" width="<%= @unique_pokemons[index].defe_iv * 1%>" height="10"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="defe_base_bar" display="inline" width="<%= @unique_pokemons[index].pokemon.defe.to_i * 1%>" height="10"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="defe_ev_bar" display="inline" width="<%= (@unique_pokemons[index].defe_ev/4) * 1%>" height="10"></p> 
-                  <b> SpA: </b> <%= @unique_pokemons[index].pokemon.spa.to_i + @unique_pokemons[index].spa_iv + @unique_pokemons[index].spa_ev/4%> <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="spa_iv_bar" display="inline" width="<%= @unique_pokemons[index].spa_iv * 1%>" height="10"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="spa_base_bar" display="inline" width="<%= @unique_pokemons[index].pokemon.spa.to_i * 1%>" height="10"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="spa_ev_bar" display="inline" width="<%= (@unique_pokemons[index].spa_ev/4) * 1%>" height="10"></p> 
-                  <b> SpD: </b> <%= @unique_pokemons[index].pokemon.spd.to_i + @unique_pokemons[index].spd_iv + @unique_pokemons[index].spd_ev/4%> <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="spd_iv_bar" display="inline" width="<%= @unique_pokemons[index].spd_iv * 1%>" height="10"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="spd_base_bar" display="inline" width="<%= @unique_pokemons[index].pokemon.spd.to_i * 1%>" height="10"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="spd_ev_bar" display="inline" width="<%= (@unique_pokemons[index].spd_ev/4) * 1%>" height="10"></p> 
-                  <b> Spe: </b> <%= @unique_pokemons[index].pokemon.spe.to_i + @unique_pokemons[index].spe_iv + @unique_pokemons[index].spe_ev/4%> <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="spe_iv_bar" display="inline" width="<%= @unique_pokemons[index].spe_iv * 1%>" height="10"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="spe_base_bar" display="inline" width="<%= @unique_pokemons[index].pokemon.spe.to_i * 1%>" height="10"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="spe_ev_bar" display="inline" width="<%= (@unique_pokemons[index].spe_ev/4) * 1%>" height="10"></p>
+                  <div class="row">  
+                      <div class="col-sm-3">
+                        <b> HP: </b> <%= @unique_pokemons[index].pokemon.hp.to_i + @unique_pokemons[index].hp_iv + @unique_pokemons[index].hp_ev/4%> 
+                      </div>
+                      <div class="col-sm-9">
+                        <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="hp_iv_bar" display="inline" width="<%= @unique_pokemons[index].hp_iv * 1%>" height="10"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="hp_base_bar" display="inline" width="<%= @unique_pokemons[index].pokemon.hp.to_i * 1%>" height="10"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="hp_ev_bar" display="inline" width="<%= (@unique_pokemons[index].hp_ev/4) * 1%>" height="10">
+                      </div>
+                  </div>
+                  <div class="row">   
+                      <div class="col-sm-3">
+                        <b> Atk: </b> <%= @unique_pokemons[index].pokemon.atk.to_i + @unique_pokemons[index].atk_iv + @unique_pokemons[index].atk_ev/4%>  
+                      </div>
+                      <div class="col-sm-9">
+                        <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="atk_iv_bar" display="inline" width="<%= @unique_pokemons[index].atk_iv * 1%>" height="10"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="atk_base_bar" display="inline" width="<%= @unique_pokemons[index].pokemon.atk.to_i * 1%>" height="10"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="atk_ev_bar" display="inline" width="<%= (@unique_pokemons[index].atk_ev/4) * 1%>" height="10">
+                      </div>
+                  </div>
+
+                  <div class="row">  
+                      <div class="col-sm-3">
+                        <b> Def: </b> <%= @unique_pokemons[index].pokemon.defe.to_i + @unique_pokemons[index].defe_iv + @unique_pokemons[index].defe_ev/4%>  
+                      </div>
+                      <div class="col-sm-9">
+                        <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="defe_iv_bar" display="inline" width="<%= @unique_pokemons[index].defe_iv * 1%>" height="10"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="defe_base_bar" display="inline" width="<%= @unique_pokemons[index].pokemon.defe.to_i * 1%>" height="10"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="defe_ev_bar" display="inline" width="<%= (@unique_pokemons[index].defe_ev/4) * 1%>" height="10">
+                      </div>
+                  </div>
+
+                  <div class="row">  
+                      <div class="col-sm-3">
+                        <b> SpA: </b> <%= @unique_pokemons[index].pokemon.spa.to_i + @unique_pokemons[index].spa_iv + @unique_pokemons[index].spa_ev/4%>  
+                      </div>
+                      <div class="col-sm-9">
+                        <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="spa_iv_bar" display="inline" width="<%= @unique_pokemons[index].spa_iv * 1%>" height="10"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="spa_base_bar" display="inline" width="<%= @unique_pokemons[index].pokemon.spa.to_i * 1%>" height="10"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="spa_ev_bar" display="inline" width="<%= (@unique_pokemons[index].spa_ev/4) * 1%>" height="10">
+                      </div>
+                  </div>
+
+                  <div class="row">  
+                      <div class="col-sm-3">
+                        <b> SpD: </b> <%= @unique_pokemons[index].pokemon.spd.to_i + @unique_pokemons[index].spd_iv + @unique_pokemons[index].spd_ev/4%> 
+                      </div>
+                      <div class="col-sm-9">
+                        <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="spd_iv_bar" display="inline" width="<%= @unique_pokemons[index].spd_iv * 1%>" height="10"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="spd_base_bar" display="inline" width="<%= @unique_pokemons[index].pokemon.spd.to_i * 1%>" height="10"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="spd_ev_bar" display="inline" width="<%= (@unique_pokemons[index].spd_ev/4) * 1%>" height="10">
+                      </div>
+                  </div>
+
+                  <div class="row">  
+                      <div class="col-sm-3">
+                        <b> Spe: </b> <%= @unique_pokemons[index].pokemon.spe.to_i + @unique_pokemons[index].spe_iv + @unique_pokemons[index].spe_ev/4%> 
+                      </div>
+                      <div class="col-sm-9">
+                        <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="spe_iv_bar" display="inline" width="<%= @unique_pokemons[index].spe_iv * 1%>" height="10"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="spe_base_bar" display="inline" width="<%= @unique_pokemons[index].pokemon.spe.to_i * 1%>" height="10"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="spe_ev_bar" display="inline" width="<%= (@unique_pokemons[index].spe_ev/4) * 1%>" height="10">
+                      </div>
+                  </div>
+                  <p class="card=text"></p>
+
                   <%= link_to "Go to page", @unique_pokemons[index] %>
                 </div>
               </div>
